--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -100,6 +100,10 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 
