--- a/B2 bttl 1.1.html
+++ b/B2 bttl 1.1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B2.2</title>
-    <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" type="text/css" href="B2 bttl 1.css">
     <style>
         .a1 {
             color: darkred;
