--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -110,9 +110,9 @@
 <body>
     <div id="box">
         <div class="avatar">
-            <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Profile.Long.D.Shine.html">
+            <a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">
                 <img src="D.logo.png" id="avt"></a>
-            <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Profile.Long.D.Shine.html">
+            <a href=" https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">
                 <div id="name">Long. D. Shine</div>
             </a>
         </div>
@@ -121,11 +121,11 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/First.html">BTTL</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Bài 1.html">B1</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Bài2.1.html">B2.1</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Bài2.2.html">B2.2</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Bài2.3.html">B2.3</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B1 bttl.html">BTTL</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B1 1.html">B1</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B1 2.1.html">B2.1</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B1 2.2.html">B2.2</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B1 2.3.html">B2.3</a>
             </div>
         </div>
         <div class="dropdown">
@@ -133,15 +133,15 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 bttl 1.1.html">BTTL 1</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 bttl 1.2.html">BTTL 2</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 1.Inline.html">B1.Inline</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 1.Internal.html">B1.Internal</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 1.External.html">B1.External</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 2.1.html">B2.1</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 2.2.html">B2.2</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/B2 2.3.html">B2.3</a>
-                <a href="https://arisu171.github.io/HomeWork-NB.Long.223001756/Profile.Long.D.Shine.html">B3</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 bttl 1.1.html">BTTL 1</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 bttl 2.2.html">BTTL 2</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 1.Inline.html">B1.Inline</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 1.Internal.html">B1.Internal</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 1.External.html">B1.External</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 2.1.html">B2.1</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 2.2.html">B2.2</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B2 2.3.html">B2.3</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">B3</a>
             </div>
         </div>
         <div class="dropdown">
