--- a/B2 2.1.html
+++ b/B2 2.1.html
@@ -5,41 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài 2.1</title>
-    <link rel="stylesheet" href="bài2.1.css">
+    <link rel="stylesheet" href="B2 2.1.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-    <style>
-        img {
-            width: 700px;
-            display: flex;
-            align-items: center;
-            text-align: center;
-        }
-
-        figcaption {
-            font-size: 13px;
-        }
-
-        .center {
-            justify-content: center;
-            text-align: center;
-        }
-
-        p {
-            max-width: 600px;
-            margin: auto;
-            margin-top: 30px;
-        }
-
-        h2 {
-            margin: auto;
-            margin-top: 50px;
-            font-size: xx-large;
-            max-width: 600px;
-        }
-    </style>
 </head>
 
 <body style="font-family: Inter; font-size:large; width:90%; max-width:800px;margin:auto">
+    <br><br><br>
     <a href="https://znews.vn/cong-nghe.html">CÔNG NGHỆ</a>
     <h1 class="center" style="font-size: xxx-large;">VinBrain sử dụng ‘siêu máy tính’ cho các giải pháp ứng dụng AI</h1>
     <p class="center" style="font-size: smaller;"><span><b>Thái Trà</b></span> - Thứ ba, 23/2/2021 20:00 (GMT+7)</p>
@@ -107,6 +78,7 @@
         vụ AI đàm thoại đa phương thức, sử dụng các phương pháp tiên tiến trong học sâu. Việc sử dụng các nền tảng này
         của NVIDIA giúp VinBrain giảm thời gian phát triển các giải pháp ứng dụng AI cũng như tạo điều kiện để các
         chuyên gia tiếp cận nhiều giải pháp trực quan hơn.</p>
+    <br><br><br>
 </body>
 
 </html>
