--- a/Profile.Long.D.Shine.html
+++ b/Profile.Long.D.Shine.html
@@ -5,220 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Long.D.Shine</title>
+    <link rel="stylesheet" href="CSS.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: rgb(20, 20, 20);
-            color: aliceblue;
-            font-size: smaller;
-            font-family: Poppins;
-        }
-
-        #box {
-            width: 95%;
-            max-width: 1100px;
-            min-width: 800px;
-            margin: auto;
-            padding-top: 60px;
-        }
-
-        .avatar {
-            background-color: rgb(20, 20, 20);
-            height: fit-content;
-            position: static;
-            height: 256px;
-            text-indent: 10px;
-            margin: auto;
-            border: 1px solid rgb(108, 159, 255);
-            border-radius: 128px;
-        }
-
-        #avt {
-            width: 150px;
-            float: left;
-            border-radius: 50%;
-            border: 3px solid rgb(19, 255, 204);
-            margin: 50px;
-        }
-
-        #name {
-            margin-top: 60px;
-            margin-right: 30px;
-            font-size: 45px;
-            font-weight: bolder;
-            color: rgb(0, 204, 255)
-        }
-
-        #bio {
-            margin-top: 10px;
-            margin-right: 50px;
-            font-size: 25px;
-            font-weight: bold;
-        }
-
-        #body {
-            background-color: rgb(20, 20, 20);
-            height: fit-content;
-            position: static;
-            text-indent: 10px;
-            margin: auto;
-            border: 1px solid rgb(180, 255, 251);
-            border-radius: 64px;
-            margin-top: 10px;
-            padding: 0;
-            display: flex;
-            font-size: 16px;
-        }
-
-        .profile {
-            width: 110%;
-            max-width: 290px;
-            min-width: 230px;
-            margin-top: 40px;
-            margin-right: 10px;
-            margin-left: 4%;
-            padding-right: 5%;
-            text-indent: 3px;
-            border-right: 1px solid rgb(83, 83, 83);
-            float: left;
-        }
-
-        .content {
-            height: fit-content;
-            margin-top: 40px;
-            margin-left: 40px;
-            margin-right: 60px;
-            text-indent: 3px;
-            line-height: 1.7;
-        }
-
-        .title {
-            font-size: 30px;
-            font-weight: bold;
-            color: rgb(0, 183, 255);
-            margin-bottom: 30px;
-        }
-
-        .menu {
-            width: 80%;
-            min-width: 700px;
-            height: fit-content;
-            text-align: justify;
-            position: static;
-            margin: auto;
-            margin-top: 40px;
-        }
-
-        #pages {
-            display: flex;
-        }
-
-        .head-bar {
-            width: fit-content;
-            margin: auto;
-            margin-top: 10px;
-            padding: 0;
-            overflow: hidden;
-            list-style-type: none;
-            background-blend-mode: overlay;
-            background-color: rgba(20, 20, 20, 0.459);
-            position: sticky;
-            top: 0;
-        }
-
-        .list-block {
-            float: left;
-        }
-
-        .block {
-            display: block;
-            font-size: large;
-            font-weight: bold;
-            color: rgb(242, 255, 255);
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            border-radius: 50px;
-        }
-
-        .block:hover {
-            color: rgb(0, 238, 255);
-            background-color: #2e2e2e60;
-            font-weight: bolder;
-        }
-
-        .li {
-            list-style-type: none;
-            color: rgb(233, 255, 248);
-            font-style: italic;
-        }
-
-        .a {
-            color: rgb(0, 162, 255);
-            text-align: left;
-            margin-right: 10px;
-        }
-
-        .l {
-            color: blueviolet;
-            margin-right: 10px;
-        }
-
-        p {
-            color: rgb(231, 250, 255);
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        h2 {
-            margin-top: 30px;
-            margin-bottom: 10px;
-            color: rgb(0, 225, 255);
-        }
-
-        h3 {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            color: rgb(134, 241, 255);
-        }
-
-        h4 {
-            margin-top: 5px;
-            margin-bottom: 5px;
-            margin-left: 10px;
-        }
-
-        .hide {
-            color: #646464;
-        }
-
-        a {
-            color: #646464;
-            text-decoration: none;
-        }
-
-        .cnt {
-            margin-top: 20px;
-        }
-
-        .boxes {
-            width: 30%;
-            margin: auto;
-            margin-top: 20px;
-        }
-
-        .box2 {
-            width: max-content;
-            height: fit-content;
-            padding: 5px 15px;
-            margin: 10px;
-            background-color: #292929;
-            border-radius: 100px;
-            text-align: center;
-        }
-    </style>
 </head>
 
 <body>
@@ -228,15 +16,13 @@
             <div id="name">Long. D. Shine</div>
             <div id="bio">We give your best design services</div>
         </div>
-        <div>
-            <ul class="head-bar">
-                <li class="list-block"><a class="block" href="#box">Home</a></li>
-                <li class="list-block"><a class="block" href="#body">Introduction</a></li>
-                <li class="list-block"><a class="block" href="#statement">Statement</a></li>
-                <li class="list-block"><a class="block" href="#special">Special</a></li>
-                <li class="list-block"><a class="block" href="#adjuration">Adjuration</a></li>
-            </ul>
-        </div>
+        <ul class="head-bar">
+            <li class="list-block" style="padding-left:13%"><a class="block" href="#box">Home</a></li>
+            <li class="list-block"><a class="block" href="#body">Introduction</a></li>
+            <li class="list-block"><a class="block" href="#statement">Statement</a></li>
+            <li class="list-block"><a class="block" href="#special">Special</a></li>
+            <li class="list-block" style="padding-right:13%"><a class="block" href="#adjuration">Adjuration</a></li>
+        </ul>
         <div id="body">
             <div class="profile" id="about">
                 <br><br>
