--- a/B1 1.html
+++ b/B1 1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="Logo web.png" rel="icon">
     <title>B1.Long</title>
     <style>
         code {
