--- a/B1 2.3.html
+++ b/B1 2.3.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B2.3.Long</title>
+    <link href="Logo web.png" rel="icon">
     <style>
         .region {
             width: 50%;
