--- a/B1 bttl.html
+++ b/B1 bttl.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bruh</title>
+    <link href="Logo web.png" rel="icon">
     <style>
         h1 {
             color: red;
