--- a/B2 1.Internal.html
+++ b/B2 1.Internal.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>TestLab.Internal</title>
+    <link href="Logo web.png" rel="icon">
     <style>
         body {
             background-color: #009294;
