--- a/B2 2.2.html
+++ b/B2 2.2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài 2.2</title>
+    <link href="Logo web.png" rel="icon">
     <link href="https://fonts.googleapis.com/css2?family=Be Vietnam Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="B2 2.2.css">
 </head>
