--- a/B2 bttl 1.2.html
+++ b/B2 bttl 1.2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B2.1</title>
+    <link href="Logo web.png" rel="icon">
     <link rel="stylesheet" type="text/css" href="B2 bttl 1.css">
     <style>
         h1 {
