--- a/Profile.Long.D.Shine.html
+++ b/Profile.Long.D.Shine.html
@@ -107,8 +107,8 @@
                     logos, brand identities, print materials, and customized interfaces tailored to the specific
                     needs of my clients.
                 </p>
-                <br>
-                <hr size="3px" width="50%" color="cyan" id="statement">
+                <br id="statement">
+                <hr size="3px" width="50%" color="cyan">
                 <br>
                 <div class="title">Statement </div>
                 <p>
@@ -142,8 +142,8 @@
                         and incorporating your feedback to enhance the quality of service.
                     </li>
                 </ol>
-                <br>
-                <hr size="3px" width="50%" color="cyan" id="special">
+                <br id="special">
+                <hr size="3px" width="50%" color="cyan">
                 <br>
                 <div class="title"> Special </div>
                 <p>
@@ -174,8 +174,8 @@
                         represented content often yields the best results.
                     </li>
                 </ul>
-                <br>
-                <hr size="3px" width="50%" color="cyan" id="adjuration">
+                <br id="adjuration">
+                <hr size="3px" width="50%" color="cyan">
                 <br>
                 <div class="title"> Adjuration </div>
                 <p>
