--- a/Profile.Long.D.Shine.html
+++ b/Profile.Long.D.Shine.html
@@ -27,7 +27,7 @@
         <div id="body">
             <div class="profile" id="about">
                 <br><br>
-                <div class="title" style="text-align: right;"> About us </div>
+                <div class="title" style="text-align: center;"> About us </div>
                 <h2>Language</h2>
                 <h4>
                     &#8226; &nbsp English: <tittle class="hide"> &nbsp Conversational</tittle>
@@ -60,7 +60,7 @@
                 <br>
                 <hr size="3px" width="50%" color="cyan" id="contact">
                 <br><br>
-                <div class="title" style="text-align: right;"> Contact us </div>
+                <div class="title" style="text-align: center;"> Contact us </div>
                 <h4 class="cnt">Phone</h4>
                 <h4>
                     <tittle class="hide">0868702903</tittle>
