--- a/B3 Window.html
+++ b/B3 Window.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>40 Năm Nhìn Lại Windows 1.0</title>
-    <link rel="stylesheet" href="B3 3.css">
+    <link rel="stylesheet" href="B3 Window.css">
 </head>
 
 <body>
