--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -53,15 +53,9 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="">1</a>
-                <a href="">2</a>
-                <a href="">3</a>
-                <a href="">4</a>
-                <a href="">5</a>
-                <a href="">6</a>
-                <a href="">7</a>
-                <a href="">8</a>
-                <a href="">9</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 CSS.Syntax.html">CSS Syntax</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 Window.html">Window</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 Lotus.html">Lotus</a>
             </div>
         </div>
         <div class="dropdown">
