--- a/B3 Lotus.html
+++ b/B3 Lotus.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="B3 Lotus.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto Slab:wght@300&display=swap" rel="stylesheet">
     <title>Lotus</title>
 </head>
 
@@ -17,9 +18,9 @@
             ngoài…</h4>
         <h4 id="head">TIN LIÊN QUAN</h4>
         <ul>
-            <li>Mạng xã hội “made in Vietnam” Lotus có cạnh tranh với Facebook?</li>
-            <li>Mạng xã hội "Made in Vietnam” Lotus: Nội dung là vua</li>
-            <li>MXH Việt Nam "Lotus" đã cho mở đăng kí tài khoản và dùng thử</li>
+            <li><a href="#">Mạng xã hội “made in Vietnam” Lotus có cạnh tranh với Facebook?</a></li>
+            <li><a href="#">Mạng xã hội "Made in Vietnam” Lotus: Nội dung là vua</a></li>
+            <li><a href="#">MXH Việt Nam "Lotus" đã cho mở đăng kí tài khoản và dùng thử</a></li>
         </ul>
         <p>Mạng xã hội Lotus là sản phẩm được hoàn thành với 200 kỹ sư công nghệ Việt, họ đã "giải" những
             bài toàn chính như: cá nhân hóa dòng tin và các luồng thông tin; các thuật toán giới thiệu, chọn lựa
