--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -56,6 +56,11 @@
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 CSS.Syntax.html">CSS Syntax</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 Window.html">Window</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 Lotus.html">Lotus</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 3.1.html">3.1</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 3.2.html">3.2</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 3.3.html">3.3</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 3.4.html">3.4</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 3.5.html">3.5</a>
             </div>
         </div>
         <div class="dropdown">
