--- a/Profile.Test.html
+++ b/Profile.Test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Logo web.png" rel="icon">
     <title>Long.D.Shine</title>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="Test.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 
@@ -14,8 +14,10 @@
     <div id="box">
         <div class="avatar">
             <img src="D.logo.png" id="avt">
-            <div id="name">Long. D. Shine</div>
-            <div id="bio">We give your best design services</div>
+            <div>
+                <div id="name">Long. D. Shine</div>
+                <div id="bio">We give your best design services</div>
+            </div>
         </div>
         <ul class="head-bar">
             <li class="list-block" style="padding-left:13%"><a class="block" href="#box">Home</a></li>
