--- a/Profile.Long.D.Shine.html
+++ b/Profile.Long.D.Shine.html
@@ -197,9 +197,10 @@
                 <br>
             </div>
         </div>
-
+        <div style="font-size: xx-large; font-weight: bold; font-style: italic; text-align: center; margin: 30px;">
+            Contact us now !!
+        </div>
     </div>
-
 </body>
 
 </html>
