--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -61,6 +61,7 @@
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 3.3.html">3.3</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 3.4.html">3.4</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 3.5.html">3.5</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">4</a>
             </div>
         </div>
         <div class="dropdown">
