--- a/Home.html
+++ b/Home.html
@@ -40,7 +40,7 @@
                             src="GMail.png"></a></div>
             </div>
         </div>
-        <img class="img" src="Logo web.png" alt="">
+        <div class="img"><img src="Dreamer.png" alt=""></div>
     </div>
 </body>
 
