--- a/Home.html
+++ b/Home.html
@@ -42,6 +42,7 @@
         </div>
         <div class="img"><img src="Dreamer.png" alt=""></div>
     </div>
+    <script src="Home.js"></script>
 </body>
 
 </html>
