--- a/Home.html
+++ b/Home.html
@@ -18,9 +18,10 @@
                 <li class="nav-item"><a href="#quatrinh">Long. D. Shine</a></li>
             </ul>
             <ul class="nav-right">
-                <li class="nav-item"><a href="#kynang">Skills</a></li>
-                <li class="nav-item"><a href="#dinhhuong">Information</a></li>
-                <li class="nav-item"><a href="#bthp">Home</a></li>
+                <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li>
+                <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">ABOUT
+                        US</a></li>
+                <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">HOME</a></li>
             </ul>
         </nav>
     </div>
@@ -39,6 +40,8 @@
                         href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcSGLdhTRxPPSvgvlKchdxwjgcrRqDZpJBqszLlkTvtJwgGmXmMXRwmVPltznwpjplWsXTWJF"><img
                             src="GMail.png"></a></div>
             </div>
+            <div class="linkto"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">My Projects</a></div>
+            <br><br><br>
         </div>
         <div class="img"><img src="Dreamer.png" alt=""></div>
     </div>
