--- a/B5 BTTL.html
+++ b/B5 BTTL.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="box">
         <div class="header">Bão mạng</div>
         <div class="content">
             <div class="flex">
