--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -69,8 +69,8 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="">1</a>
-                <a href="">2</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B3 CSS.Syntax.html">CSS Syntax</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
                 <a href="">3</a>
                 <a href="">4</a>
                 <a href="">5</a>
