--- a/B5 Material.html
+++ b/B5 Material.html
@@ -118,30 +118,136 @@
         </div>
         <div class="bodie">
             <h2>News & launches</h2>
-            <div class="ph1">
-                <div class="list1">
-                    <a href="https://m3.material.io/blog/google-io-2024/" class="link1">
+            <div class="ph" id="ph1">
+                <div class="list">
+                    <a href="https://m3.material.io/blog/google-io-2024/" class="link">
                         <div class="img"><img src="material pic.jpg" alt=""></div>
                         <h3>Material Design at Google I/O</h3>
                         <p>See the full list of Material talks and tutorials launching at I/O 2024</p>
                     </a>
                 </div>
-                <div class="list1">
-                    <a href="https://m3.material.io/blog/get-google-fonts-update/" class="link1">
+                <div class="list">
+                    <a href="https://m3.material.io/blog/get-google-fonts-update/" class="link">
                         <div class="img"><img src="material pic2.jpg" alt=""></div>
                         <h3>How to get Google Fonts</h3>
                         <p>New API updates and website upgrades make font integration easier than ever</p>
                     </a>
                 </div>
-                <div class="list1">
+                <div class="list">
                     <a href="https://www.figma.com/community/file/1035203688168086460/material-3-design-kit"
-                        class="link1">
+                        class="link">
                         <div class="img"><img src="material pic3.jpg" alt=""></div>
                         <h3>Figma design kit</h3>
                         <p>Start designing and prototyping with the complete M3 library of ready-made components</p>
                     </a>
                 </div>
             </div>
+            <h2>Design system updates</h2>
+            <div class="ph" id="ph2">
+                <div class="list">
+                    <a href="https://m3.material.io/foundations/content-design/overview" class="link">
+                        <div class="img"><img src="material pic4.jpg" alt=""></div>
+                        <h3>Content design</h3>
+                        <p>Guidance and best practices for UX writing and information design</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://m3.material.io/components/carousel/overview" class="link">
+                        <div class="img"><img src="material pic5.jpg" alt=""></div>
+                        <h3>New component: Carousel</h3>
+                        <p>An expressive new way to display a horizontally scrolling collection of content</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://m3.material.io/develop/android/jetpack-compose" class="link">
+                        <div class="img"><img src="material pic6.jpg" alt=""></div>
+                        <h3>M3 for Jetpack Compose</h3>
+                        <p>With the latest stable release, use Jetpack Compose to build a complete M3 Android app</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://www.figma.com/community/plugin/1034969338659738588/material-theme-builder"
+                        class="link">
+                        <div class="img"><img src="material pic7.jpg" alt=""></div>
+                        <h3>Material Theme Builder</h3>
+                        <p>Easily migrate or get started with the M3 color system and dynamic color</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://m3.material.io/styles/color/system/how-the-system-works" class="link">
+                        <div class="img"><img src="material pic8.jpg" alt=""></div>
+                        <h3>How the color system works</h3>
+                        <p>From color roles and accessible tone pairs to dynamic color, learn how color works in
+                            Material</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://m3.material.io/styles/icons/applying-icons" class="link">
+                        <div class="img"><img src="material pic9.jpg" alt=""></div>
+                        <h3>Using Material icons</h3>
+                        <p>Learn how to use and customize the latest system icons for your UI</p>
+                    </a>
+                </div>
+            </div>
+            <h2>Resources</h2>
+            <div class="ph" id="ph3">
+                <div class="list">
+                    <a href="https://m3.material.io/blog/" class="link">
+                        <h3>Material blog</h3>
+                        <p>News, tutorials, and inspiration from the Material team</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://www.figma.com/community/file/1035203688168086460/material-3-design-kit"
+                        class="link">
+                        <h3>Figma design kit</h3>
+                        <p>Customizable styles and components to helps you design with Material 3</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://m3.material.io/get-started" class="link">
+                        <h3>Get started</h3>
+                        <p>Guides, videos, and tools to start building with Material</p>
+                    </a>
+                </div>
+                <div class="list">
+                    <a href="https://m3.material.io/develop" class="link">
+                        <h3>Develop</h3>
+                        <p>Code and developer documentation for building with Material</p>
+                    </a>
+                </div>
+            </div>
+            <br><br><br><br>
+            <hr> <br><br>
+            <div class="footer">
+                <div class="foot1">
+                    <div class="icon"><a href=""><i class="fa-solid fa-house"></i></a></div>
+                    <div class="text">Material Design is an adaptable system of guidelines, components, and tools that
+                        support the best practices of user
+                        interface design. Backed by open-source code, Material Design streamlines collaboration between
+                        designers and
+                        developers, and helps teams quickly build beautiful products.</div>
+                </div>
+                <div class="grid">
+                    <div class="title">Social</div>
+                    <div class="title">Libraries</div>
+                    <div class="title">Archived versions</div>
+                    <div class="linked"><a href="">Github</a><a href="">Twitter</a><a href="">YouTube</a><a href="">Blog
+                            RSS</a></div>
+                    <div class="linked"><a href="">Android</a><a href="">Compose</a><a href="">Flutter</a><a
+                            href="">Web</a></div>
+                    <div class="linked"><a href="">Material Design 1</a><a href="">Material Design 2</a></div>
+                </div>
+            </div>
+            <br><br><br>
+            <div class="end">
+                <div class="eli" id="gg">Google</div>
+                <div class="eli">Privacy Policy</div>
+                <div class="eli">Terms of Service</div>
+                <div class="eli">Join research studies</div>
+                <div class="eli">Feedback</div>
+            </div>
+            <br><br><br><br>
         </div>
     </div>
 </body>
