--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -78,15 +78,10 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="">1</a>
-                <a href="">2</a>
-                <a href="">3</a>
-                <a href="">4</a>
-                <a href="">5</a>
-                <a href="">6</a>
-                <a href="">7</a>
-                <a href="">8</a>
-                <a href="">9</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B5 BTTL.html">BTTL</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B5 Material.html">Material</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B5 Baomoi.html">BaoMoi</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
             </div>
         </div>
         <div class="dropdown">
