--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
                 <li class="nav-item"><a href="#quatrinh">Long. D. Shine</a></li>
             </ul>
             <ul class="nav-right">
-                <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li>
+                <!-- <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li> -->
                 <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">ABOUT
                         US</a></li>
                 <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">HOME</a></li>
@@ -45,6 +45,7 @@
         </div>
         <div class="img"><img src="Dreamer.png" alt=""></div>
     </div>
+
     <script src="Home.js"></script>
 </body>
 
