--- a/Home.html
+++ b/Home.html
@@ -5,25 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <title>Home</title>
 </head>
 
 <body>
-    <div>
-        <nav class="navbar">
-            <ul class="nav-left">
-                <li class="nav-item"><img class="avt" src="D.logo.png"></li>
-                <li class="nav-item"><a href="#quatrinh">Long. D. Shine</a></li>
-            </ul>
-            <ul class="nav-right">
-                <!-- <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li> -->
-                <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">ABOUT
-                        US</a></li>
-                <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">HOME</a></li>
-            </ul>
-        </nav>
+    <div class="bar"></div>
+    <nav class="navbar">
+        <ul class="nav-left">
+            <li class="nav-item"><img class="avt" src="D.logo.png"></li>
+            <li class="nav-item"><a href="#quatrinh">Long. D. Shine</a></li>
+        </ul>
+        <ul class="nav-right">
+            <!-- <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li> -->
+            <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">ABOUT
+                    US</a></li>
+            <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">HOME</a></li>
+        </ul>
+    </nav>
+    <div class="nav-small">
+        <div id="nav-icon-1"><i class="fa-solid fa-bars"></i></div>
+        <div class="hide">
+            <a id="nav-icon-2" href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">
+                <i class="fa-solid fa-user"></i></a>
+            <a id="nav-icon-2" href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">
+                <i class="fa-solid fa-house"></i></a>
+        </div>
     </div>
     <br><br><br><br>
     <div class="inf">
