--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -8,10 +8,12 @@
     <title>Long.D.Shine-Total</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
     <link rel="stylesheet" href="Tool.css">
 </head>
 
 <body>
+    <div class="ic"><a href="https://arisu171.github.io/Long.D.Shine/Home.html"><i class="fa fa-home"></i></a></div>
     <div id="box">
         <div class="avatar">
             <a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">
@@ -89,15 +91,9 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="">1</a>
-                <a href="">2</a>
-                <a href="">3</a>
-                <a href="">4</a>
-                <a href="">5</a>
-                <a href="">6</a>
-                <a href="">7</a>
-                <a href="">8</a>
-                <a href="">9</a>
+                <a href="B6 Zing.html">Zing-MP3</a>
+                <a href="B6 Kalium.html">Kalium-1</a>
+                <a href="B6 Kalium-2.html">Kalium-2</a>
             </div>
         </div>
         <div class="dropdown">
