--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <ul class="nav-left">
             <li class="nav-item"><img class="avt" src="D.logo.png"></li>
-            <li class="nav-item"><a href="#quatrinh">Long. D. Shine</a></li>
+            <li class="nav-item"><a href="#name">Long. D. Shine</a></li>
         </ul>
         <ul class="nav-right">
             <!-- <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li> -->
@@ -33,14 +33,16 @@
                 <i class="fa-solid fa-house"></i></a>
         </div>
     </div>
-    <br><br><br><br>
     <div class="inf">
         <div class="text">
-            <div class="name">I am Long</div>
+            <div class="name" id="name">I am Long</div>
             <div class="career">Web Developer</div>
             <div class="career">UX Designer</div>
-            <div class="bio">I break down compex users experinece problems to create intergritly focussed solutions that
-                connect billions of people</div>
+        </div>
+        <div class="img"><img src="Dreamer.png" alt=""></div>
+        <div class="bio">I break down compex users experinece problems to create intergritly focussed solutions that
+            connect billions of people</div>
+        <div class="contact">
             <div class="icon">
                 <div><a href="https://github.com/Arisu171"><img src="Git.png"></a></div>
                 <div><a href="https://www.facebook.com/long.Des171"><img src="Facebook.png"></a></div>
@@ -51,7 +53,6 @@
             <div class="linkto"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">My Projects</a></div>
             <br><br><br>
         </div>
-        <div class="img"><img src="Dreamer.png" alt=""></div>
     </div>
 
     <script src="Home.js"></script>
