--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -91,9 +91,9 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="B6 Zing.html">Zing-MP3</a>
-                <a href="B6 Kalium.html">Kalium-1</a>
-                <a href="B6 Kalium-2.html">Kalium-2</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B6 Zing.html">Zing-MP3</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium.html">Kalium-1</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium-2.html">Kalium-2</a>
             </div>
         </div>
         <div class="dropdown">
@@ -101,15 +101,8 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="">1</a>
-                <a href="">2</a>
-                <a href="">3</a>
-                <a href="">4</a>
-                <a href="">5</a>
-                <a href="">6</a>
-                <a href="">7</a>
-                <a href="">8</a>
-                <a href="">9</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium.html">Kalium-1</a>
             </div>
         </div>
 
