--- a/B6 Zing.html
+++ b/B6 Zing.html
@@ -118,15 +118,15 @@
             cursor: pointer;
         }
 
-        .list:hover img {
+        .item:hover img {
             scale: 1.15;
         }
 
-        .list:hover .black {
+        .item:hover .black {
             opacity: 1;
         }
 
-        .list:hover .icons {
+        .item:hover .icons {
             opacity: 1;
             scale: 1.25;
         }
