--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
     <title>Home</title>
 </head>
 
-<body>
+<body id="bodyy">
     <div class="bar"></div>
     <nav class="navbar">
         <ul class="nav-left">
@@ -57,6 +57,7 @@
     </div>
 
     <script src="Home.js"></script>
+
 </body>
 
 </html>
