--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -105,6 +105,16 @@
                 <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium.html">Kalium-1</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class="dropbtn"> Week 8
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B8 Min-Max.html">Max-Min</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B6 Gacha.html">Gacha</a>
+            </div>
+        </div>
 
 </body>
 
