--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -65,7 +65,7 @@
 
         p {
             font-size: 18px;
-            color: #333;
+            color: #ffffff;
         }
 
         #numberOptions button {
@@ -93,12 +93,11 @@
         <button onclick="startGame()">START</button>
 
         <div id="gameSection" style="display:none;">
-            <p> <span id="maxNumber"></span> hoặc chọn ở dưới</p>
+            <p> Type 0 - <span id="maxNumber"></span> or:</p>
             <div id="numberOptions"></div>
         </div>
 
         <p id="message"></p>
-        <p id="trueanswer"></p>
     </div>
     <script src="B8 Gacha.js"></script>
 </body>
