--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -11,16 +11,16 @@
             font-family: Montserrat;
             background-color: #1d1d1d;
             text-align: center;
-            padding: 50px;
+            padding-top: 30px;
         }
 
         .container {
             background-color: rgba(0, 0, 0, 0);
             font-size: 150%;
             font-weight: bold;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* padding: 20px; */
+            /* border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
             display: inline-block;
             width: 90vw;
         }
@@ -40,7 +40,7 @@
             padding: 3% 3% 3% 4.5%;
             margin: 5% 35%;
             border-radius: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #c08f8f;
             font-size: 30px;
             text-align: center;
             background-color: #ffffff00;
