--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -5,9 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
     <title>Game đoán số</title>
     <style>
+        html {
+            scroll-behavior: smooth;
+            caret-color: transparent;
+            cursor: default;
+        }
+
+        * {
+            -webkit-tap-highlight-color: transparent;
+            /* Vô hiệu hóa chọn văn bản */
+            -webkit-touch-callout: none;
+            /* Ngăn chặn menu context trên iOS */
+            -webkit-user-select: none;
+            /* Ngăn chọn văn bản trên iOS */
+            -khtml-user-select: none;
+            /* Ngăn chọn văn bản trên Konqueror */
+            -moz-user-select: none;
+            /* Ngăn chọn văn bản trên Firefox */
+            -ms-user-select: none;
+            /* Ngăn chọn văn bản trên Internet Explorer */
+            user-select: none;
+            /* Ngăn chọn văn bản trên các trình duyệt chuẩn */
+        }
+
+        :root {
+            --Wid: 100vw;
+            /* Giá trị mặc định */
+            --Hig: 100vh;
+            /* Giá trị mặc định */
+            --pot: calc(var(--pot) * 1);
+        }
+
+        ::selection {
+            background: transparent;
+            color: inherit;
+        }
+
+        img {
+            -webkit-user-drag: none;
+            user-drag: none;
+        }
+
         body {
+            margin: 0px;
+            width: 100vw;
+            overflow-x: hidden;
             font-family: Montserrat;
             background-color: #1d1d1d;
             text-align: center;
@@ -35,32 +80,76 @@
             color: rgb(213, 5, 255);
         }
 
+        .levelchange {
+            display: flex;
+            /* grid-template-columns: repeat(3, 1fr); */
+            width: 50%;
+            margin: auto;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+        }
+
         input {
-            width: 20%;
-            padding: 3% 3% 3% 4.5%;
-            margin: 5% 35%;
+            padding: 2% 5%;
+            margin: 30px 5%;
             border-radius: 20px;
-            border: 1px solid #c08f8f;
+            border: 1px solid #c08f8f00;
             font-size: 30px;
             text-align: center;
             background-color: #ffffff00;
             color: rgb(255, 0, 119);
+            appearance: none;
+            /* Ẩn các nút tăng giảm mặc định */
+            -moz-appearance: textfield;
+            /* Ẩn cho Firefox */
+        }
+
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        i {
+            font-size: 45px;
+            color: #7700ffb4;
+            cursor: pointer;
+            transition: 0.3s ease;
+        }
+
+        i:hover {
+            scale: 1.2;
+            color: #cfa4ffb4;
+        }
+
+        i:active {
+            color: #310072ce;
         }
 
         button {
             padding: 10px 20px;
             margin: 5px;
-            background-color: #d400ff;
+            background-color: #b700ff;
             font-size: 20px;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            transition: 0.3s ease;
+            transition: 0.5s ease;
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color: #4d018b;
+            border-radius: 7px;
+            scale: 1.2;
+        }
+
+        button:active {
+            background: linear-gradient(45deg, #450086, #da44ff);
+            background-size: 200% 200%;
+            border-radius: 10px;
+            animation: gradient-animation 3s ease infinite;
         }
 
         p {
@@ -69,18 +158,40 @@
         }
 
         #numberOptions button {
-            padding: 10px;
+            padding: 15px;
             margin: 5px;
-            background-color: #f0ad4e;
+            background: #7c47d1;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            transition: 0.3s ease;
+            transition: 0.4s ease;
         }
 
         #numberOptions button:hover {
-            background-color: #ec971f;
+            background: #ffa162;
+            scale: 1.2;
+        }
+
+        #numberOptions button:active {
+            background: linear-gradient(45deg, #ffa66b, #7c47d1);
+            background-size: 200% 200%;
+            animation: gradient-animation 2s ease infinite;
+            scale: 1.2;
+        }
+
+        @keyframes gradient-animation {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
     </style>
 </head>
@@ -89,7 +200,11 @@
     <div class="container">
         <h1>GACHA & SKILL</h1>
         <label for="difficulty">LEVEL</label>
-        <input type="number" id="difficulty" min="0" max="9" placeholder="Level">
+        <div class="levelchange">
+            <div onclick="decreaseValue()" class="down"><i class="fa-solid fa-caret-left"></i></div>
+            <input type="number" id="difficulty" min="0" max="9" placeholder="1 - 9" value="0">
+            <div onclick="increaseValue()" class="up"><i class="fa-solid fa-caret-right"></i></div>
+        </div>
         <button onclick="startGame()">START</button>
 
         <div id="gameSection" style="display:none;">
