--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -208,7 +208,7 @@
         <button onclick="startGame()">START</button>
 
         <div id="gameSection" style="display:none;">
-            <p> Type 0 - <span id="maxNumber"></span> or:</p>
+            <p> Type 0 - <span id="maxNumber"></span> or</p>
             <div id="numberOptions"></div>
         </div>
 
