--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -202,7 +202,7 @@
         <label for="difficulty">LEVEL</label>
         <div class="levelchange">
             <div onclick="decreaseValue()" class="down"><i class="fa-solid fa-caret-left"></i></div>
-            <input type="number" id="difficulty" min="0" max="9" placeholder="1 - 9" value="0">
+            <input type="number" id="difficulty" min="0" max="9" placeholder="1 - 9">
             <div onclick="increaseValue()" class="up"><i class="fa-solid fa-caret-right"></i></div>
         </div>
         <button onclick="startGame()">START</button>
