--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -193,6 +193,49 @@
                 background-position: 0% 50%;
             }
         }
+
+        .arlert {
+            display: none;
+            position: fixed;
+            width: 240px;
+            height: 240px;
+            top: 150px;
+            left: calc(50vw - 200px);
+            box-shadow: 0 0 20px rgba(111, 0, 255, 0.548);
+            background: rgb(26, 26, 26);
+            padding: 80px;
+            z-index: 2;
+            border-radius: 20px;
+            color: white;
+        }
+
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.05);
+            z-index: 1;
+        }
+
+        .numberr {
+            font-size: 120px;
+            margin: 0;
+            color: rgb(0, 174, 255);
+            font-weight: bold;
+        }
+
+        .noti {
+            font-size: 25px;
+            font-weight: 700;
+            color: rgb(255, 193, 21);
+        }
+
+        .noticnt {
+            font-size: 20px;
+        }
     </style>
 </head>
 
@@ -210,10 +253,14 @@
         <div id="gameSection" style="display:none;">
             <p> Type 0 - <span id="maxNumber"></span> or</p>
             <div id="numberOptions"></div>
+            <div id="arlert" class="arlert">
+                <div class="noti">Congratulations</div>
+                <div id="noticnt"></div>
+            </div>
         </div>
-
         <p id="message"></p>
     </div>
+    <div id="overlay" class="overlay"></div>
     <script src="B8 Gacha.js"></script>
 </body>
 
