--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -194,6 +194,11 @@
             }
         }
 
+        #numberOptions {
+            width: 270px;
+            margin: auto;
+        }
+
         .arlert {
             position: fixed;
             width: 240px;
