--- a/Home.html
+++ b/Home.html
@@ -6,32 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="Home-nav.css">
     <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body id="bodyy">
-    <div class="bar"></div>
-    <nav class="navbar">
-        <ul class="nav-left">
-            <li class="nav-item"><img class="avt" src="D.logo.png"></li>
-            <li class="nav-item"><a href="#name">Long. D. Shine</a></li>
-        </ul>
-        <ul class="nav-right">
-            <!-- <li class="nav-item"><a href="#HOME">DON'T CLICK HERE !!</a></li> -->
-            <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">ABOUT
-                    US</a></li>
-            <li class="nav-item"><a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">HOME</a></li>
-        </ul>
-    </nav>
-    <div class="nav-small">
-        <div id="nav-icon-1"><i class="fa-solid fa-bars"></i></div>
-        <div class="hide">
-            <a id="nav-icon-2" href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html">
-                <i class="fa-solid fa-user"></i></a>
-            <a id="nav-icon-2" href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html">
-                <i class="fa-solid fa-house"></i></a>
+    <div id="shadow"></div>
+    <div class="navbar">
+        <div class="navright" id="navright">
+            <div class="navtitle"><a href="#bannerimg1">Home</a></div>
+            <div class="navtitle">About Us</div>
+            <div class="navtitle">Skill</div>
+            <div class="navtitle">Project</div>
+            <div class="navtitle">Contact</div>
+        </div>
+        <div class="navbutton navradius" id="navbutt">
+            <div class="navicon" id="navicon"><i class="fa-solid fa-bars"></i></div>
+            <div class="navitem">
+                <a href="#bannerimg1">
+                    <i class="fa-solid fa-house"></i>
+                    <div class="navitcap">Home</div>
+                </a>
+            </div>
+            <div class="navitem">
+                <i class="fa-solid fa-user"></i>
+                <div class="navitcap">About Us</div>
+            </div>
+            <div class="navitem">
+                <i class="fa-solid fa-code"></i>
+                <div class="navitcap">Skill</div>
+            </div>
+            <div class="navitem">
+                <i class="fa-solid fa-diagram-project"></i>
+                <div class="navitcap">Project</div>
+            </div>
+            <div class="navitem">
+                <i class="fa-solid fa-address-book"></i>
+                <div class="navitcap">Contact</div>
+            </div>
         </div>
     </div>
     <div class="inf">
