--- a/B9 Form.html
+++ b/B9 Form.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-
-    <h2>FORM ĐĂNG KÝ</h2>
-
     <form action="#" method="post">
+        <h2>FORM ĐĂNG KÝ</h2>
+
         <label class="tittle" for="ho">Họ</label>
         <input type="text" id="ho" name="ho" placeholder="Nhập họ">
         <span class="error-message" id="ho-error"></span>
@@ -85,7 +84,7 @@
         <label class="tittle" for="khac">Khác</label>
         <textarea id="khac" name="khac" rows="3" placeholder="Nhập sở thích khác..."></textarea>
 
-        <div style="display: flex; justify-content: space-between;">
+        <div class="send">
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </div>
