--- a/B9 Form.html
+++ b/B9 Form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Đăng Ký</title>
+    <title>Form</title>
     <link rel="stylesheet" href="B9 Form.css">
 </head>
 
@@ -50,10 +50,10 @@
 
         <label class="tittle">Giới tính</label>
         <div class="gender-group">
-            <input type="radio" id="nam" name="gioitinh" value="Nam">
-            <label for="nam">Nam</label>
-            <input type="radio" id="nu" name="gioitinh" value="Nữ">
-            <label for="nu">Nữ</label>
+            <input type="radio" id="male" name="gioitinh" value="Nam">
+            <label for="male">Nam</label>
+            <input type="radio" id="female" name="gioitinh" value="Nữ">
+            <label for="female">Nữ</label>
         </div>
         <span class="error-message" id="gioitinh-error"></span>
 
