--- a/B9 Banner.html
+++ b/B9 Banner.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-    <div class="homebanner">
-        <img src="Banner1.jpg" alt="" class="bannerimg" id="bannerimg0">
-        <img src="Banner2.jpg" alt="" class="bannerimg" id="bannerimg1">
-        <img src="Banner5.jpg" alt="" class="bannerimg" id="bannerimg-1">
+    <div class="homebanner" onload="load_banner();">
+        <img src="Banner1.jpg" alt="" class="bannerimg bannerimg1" id="bannerimg1">
+        <img src="Banner2.jpg" alt="" class="bannerimg bannerimg2" id="bannerimg2">
+        <img src="Banner3.jpg" alt="" class="bannerimg bannerimg3" id="bannerimg3">
+        <img src="Banner4.jpg" alt="" class="bannerimg bannerimg4" id="bannerimg4">
+        <img src="Banner5.jpg" alt="" class="bannerimg bannerimg5" id="bannerimg5">
         <div class="bannercontrol" id="bannercontrolprev" onclick="prev()">
             <i class="fa-solid fa-circle-chevron-left"></i>
         </div>
@@ -22,10 +24,10 @@
         </div>
         <div class="bannercurrent">
             <div id="bannercurent1"><i class="fa-solid fa-circle"></i></div>
-            <div id="bannercurent2"><i class="fa-regular fa-circle"></i></i></div>
-            <div id="bannercurent3"><i class="fa-regular fa-circle"></i></i></div>
-            <div id="bannercurent4"><i class="fa-regular fa-circle"></i></i></div>
-            <div id="bannercurent5"><i class="fa-regular fa-circle"></i></i></div>
+            <div id="bannercurent2"><i class="fa-regular fa-circle"></i></div>
+            <div id="bannercurent3"><i class="fa-regular fa-circle"></i></div>
+            <div id="bannercurent4"><i class="fa-regular fa-circle"></i></div>
+            <div id="bannercurent5"><i class="fa-regular fa-circle"></i></div>
         </div>
     </div>
     <script src="B9 Banner.js"></script>
