--- a/Home.html
+++ b/Home.html
@@ -69,9 +69,28 @@
             <br><br><br>
         </div>
     </div>
+    <div class="about">
+        <div class="title"></div>
+        <div class="content">
+            <div class="myself">
+                <div class="myname"><span class="label">My name is</span><span class="text">Nguyễn Bảo Long</span></div>
+                <div class="myage"><span class="label">I am</span><span class="text">19 Years old</span></div>
+                <div class="mycareer"><span class="label">I am studying and working in the field of</span><span
+                        class="text">Information Technology</span></div>
+                <div class="myhobbie"><span class="label">My hobbies are</span>
+                    <div class="hobbie">Puzzle solving</div>
+                    <div class="hobbie">Playing Game</div>
+                    <div class="hobbie">Listening to Music</div>
+                    <div class="hobbie">Playing chess</div>
+                </div>
+            </div>
+            <div class="aboutme">
+
+            </div>
+        </div>
+    </div>
     <script src="Home-nav.js"></script>
     <script src="Home.js"></script>
-
 </body>
 
 </html>
