--- a/B9 Banner.html
+++ b/B9 Banner.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>@Coppyright by Orias!</h1>
-    <div class="homebanner" id="homebanner" onload="load_banner();">
+    <div class="homebanner" id="homebanner">
         <img src="Banner1.jpg" alt="" class="bannerimg bannerimg1" id="bannerimg1">
         <img src="Banner2.jpg" alt="" class="bannerimg bannerimg2" id="bannerimg2">
         <img src="Banner3.jpg" alt="" class="bannerimg bannerimg3" id="bannerimg3">
