--- a/Profile.Long.D.Shine.html
+++ b/Profile.Long.D.Shine.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Logo web.png" rel="icon">
     <title>Long.D.Shine</title>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="Profile.Long.D.Shine.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 
